# unicorn-trading-suite

./: CHANGELOG.md  README.md  environment.yml  meta.yaml  pyproject.toml  setup.py  unittest_trading_suite.py
.github/: pull_request_template.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build_wheels.yml  unit-tests.yml
dev/: reset.sh  set_version_config.txt
dev/pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
dev/sphinx/: create_docs.sh  install_sphinx.sh
dev/sphinx/source/: conf.py  contributing.md  index.rst  modules.rst  readme.md  security.md
docs/: .buildinfo  CNAME  changelog.html  code_of_conduct.html  contributing.html  genindex.html  index.html  license.html  modules.html  objects.inv  readme.html  search.html  searchindex.js  security.html
docs/_sources/: changelog.md.txt  contributing.md.txt  index.rst.txt  license.rst.txt  readme.md.txt  security.md.txt
tools/: get_versions_of_unicorn_packages.py
unicorn_trading_suite/: __init__.py  manager.py
