[tool.poetry]
name = "unicorn-trading-suite"
version = "1.0.0"
description = "LUCIT's UNICORN Trading Suite is a comprehensive collection of open-source Python packages designed for building sophisticated automated trading systems. Tailored for Python developers, this suite offers seamless integration with the Binance API, enabling the creation of advanced and professional trading bots for streamlined and efficient cryptocurrency trading."
authors = ["LUCIT Systems and Development <info@lucit.tech>"]
license = "LSOSL - LUCIT Synergetic Open Source License"
readme = "README.md"
homepage = "https://www.lucit.tech/unicorn-trading-suite.html"
documentation = "https://unicorn-trading-suite.docs.lucit.tech"
repository = "https://github.com/LUCIT-Systems-and-Development/unicorn-trading-suite"

[tool.poetry.urls]
'Howto' = 'https://www.lucit.tech/unicorn-trading-suite.html#howto'
'Documentation' = 'https://unicorn-trading-suite.docs.lucit.tech'
'Wiki' = 'https://github.com/LUCIT-Systems-and-Development/unicorn-trading-suite/wiki'
'Author' = 'https://www.lucit.tech'
'Changes' = 'https://unicorn-trading-suite.docs.lucit.tech/changelog.html'
'License' = 'https://unicorn-trading-suite.docs.lucit.tech/license.html'
'Issue Tracker' = 'https://github.com/LUCIT-Systems-and-Development/unicorn-trading-suite/issues'
'Telegram' = 'https://t.me/unicorndevs'
'Chat' = 'https://app.gitter.im/#/room/#unicorn-trading-suite_unicorn-trading-suite:gitter.im'
'Get Support' = 'https://www.lucit.tech/get-support.html'
'LUCIT Online Shop' = 'https://shop.lucit.services/software/unicorn-trading-suite'

[tool.poetry.dependencies]
python = ">=3.7.0"
lucit-licensing-python = ">=1.8.1"
unicorn-fy = ">=0.13.1"
unicorn-binance-local-depth-cache = ">=1.0.0"
unicorn-binance-rest-api = ">=1.0.0"
unicorn-binance-websocket-api = ">=1.0.0"
unicorn-binance-trailing-stop-loss = ">=1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "wheel", "Cython", "pip"]
build-backend = "setuptools.build_meta"

[tool.poetry.package_data]
unicorn_trading_suite = ["*.so", "*.dll"]
